--- a/index.html
+++ b/index.html
@@ -4,20 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Solution for Module 2</title>
-    <style>
-      /* Base Style */
-      * {
-        box-sizing: border-box;
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css" />
+    
   </head>
   <body>
     <h1>Our Menu</h1>
 
     <div class="row">
-      <div><p>Chicken</p></div>
-      <div><p>Beef</p></div>
-      <div><p>Sushi</p></div>
+      <div class="col-lg-3 col-md-6"><p>Chicken</p></div>
+      <div class="col-lg-3 col-md-6"><p>Beef</p></div>
+      <div class="col-lg-3 col-md-6"><p>Sushi</p></div>
     </div>
   </body>
 </html>
