styles.css commit

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Solution for Module 2</title>
     <link rel="stylesheet" href="css/style.css" />
-    
-  </head>
-  <body>
+    </head>
+  
+    <body>
     <h1>Our Menu</h1>
-
+  
+  
     <div class="row">
-      <div class="col-lg-3 col-md-6"><p>Chicken</p></div>
-      <div class="col-lg-3 col-md-6"><p>Beef</p></div>
-      <div class="col-lg-3 col-md-6"><p>Sushi</p></div>
+      <div class="col-lg-3 col-md-3 col-sm-12"><p>Chicken</p></div>
+      <div class="col-lg-3 col-md-3 col-sm-12"><p>Beef</p></div>
+      <div class="col-lg-3 col-md-3 col-sm-12"><p>Sushi</p></div>
     </div>
   </body>
 </html>
